[gd_scene load_steps=6 format=2]

[ext_resource path="res://TestSubjects/SpawnerDummy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Gadgets/Spawner/Spawner2D.gd" type="Script" id=3]
[ext_resource path="res://Sequencers/Bool/ToggleSequencer.gd" type="Script" id=4]
[ext_resource path="res://TestSubjects/SpawnableDummy.tscn" type="PackedScene" id=5]

[node name="SpawnerDummy" type="Node2D"]
script = ExtResource( 1 )

[node name="ToggleSequencer" type="Node" parent="."]
script = ExtResource( 4 )
time_between_toggles = 5.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Spawner2D" type="Node2D" parent="Sprite"]
script = ExtResource( 3 )
scene_to_spawn = ExtResource( 5 )

[node name="SpawnParent" type="Node2D" parent="."]
